# simple-log-analyzer

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
log_analyzer/: __init__.py  cli.py
log_analyzer/parsers/: __init__.py  meraki.py  palo_alto.py  unifi.py  watchguard.py
tests/: test_reports.py
